--- a/main.html
+++ b/main.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	
+	<div>
+		"My current favourite song is <anchor href=https://www.youtube.com/watch?v=cWMxCE2HTag>Softly</anchor>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
