--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	
 	<div>
-		"My current favourite song is <anchor href=https://www.youtube.com/watch?v=cWMxCE2HTag>Softly</anchor>
+		"My current favourite song is <a href=https://www.youtube.com/watch?v=cWMxCE2HTag>Softly"</a>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
